@@ -113,6 +113,7 @@ class Command(Enum):
 
     # Compatibility, PREPARED will be changed to READY
     SET_PRINTER_READY = "SET_PRINTER_PREPARED"
+    CANCEL_PRINTER_READY = "CANCEL_PRINTER_PREPARED"
 
     LOAD_FILAMENT = "LOAD_FILAMENT"
     UNLOAD_FILAMENT = "UNLOAD_FILAMENT"
